<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WinTalker Voice</string>
    <string name="general_settings">Nustatymai</string>
    <string name="sample_text">Tai kalbos sintezės lietuvių pavyzdys</string>
    <string name="available_voices">lit-LTU</string>
    <string name="country">LTU</string>
    <string name="lang">lit</string>
    <string name="expiry_text">Prašome suaktyvinti licenciją</string>
    <string name="default_voice">Gintaras</string>
    <string name="imei">IMEI:</string>
    <string name="number">SIM ID:</string>
    <string name="act_num">Aktyvinimo numeris</string>
    <string name="activate">Aktyvinimas</string>
    <string name="voice">Voice:</string>
    <string name="voice_choice">Balsai</string>
    <string name="imei_choice">imei_lt</string>
    <string name="imei_value">imei_val</string>
    <string name="number_value">number_val</string>
    <string name="voice_lang">voice_lt</string>
    <string name="punctuation">Skyryba</string>
    <string name="number_processing">Skaičių įgarsinimas</string>
    <string name="pitch">Tembras</string>
    <string name="pause_word">Pauzė tarp žodžių</string>
    <string name="pause_sentence">Pauzė tarp sakinių</string>
    <string name="act_file">wtvakey.txt</string>
    <string name="use_dictionary">Naudoti žodyną</string>
    <string name="modify_dictionary">Keisti žodyną</string>
    <string name="add">Pridėti žodį</string>
    <string name="modify">Keisti žodį</string>
    <string name="delete">Ištrinti žodį</string>
    <string name="cancel">Atšaukti</string>
    <string name="dict">stdlit.dct</string>

    <!-- New in-app UI -->
    <string name="main_intro">Įveskite tekstą ir paspauskite „Kalbėti", kad išgirstumėte lietuvišką Gintaro balsą.</string>
    <string name="main_hint">Tekstas</string>
    <string name="speak">Kalbėti</string>
    <string name="stop">Stop</string>
    <string name="speech_rate">Kalbėjimo greitis</string>
    <string name="open_settings">Atidaryti nustatymus</string>
    <string name="export_log">Eksportuoti logą į Atsisiuntimus</string>
    <string name="tts_loading">Kraunamas sintezatorius…</string>
    <string name="tts_ready">Sintezatorius paruoštas.</string>
    <string name="tts_no_lang">Lietuvių balsas neprieinamas.</string>
    <string name="tts_failed">Nepavyko paleisti sintezatoriaus.</string>
    <string name="tts_not_ready">Sintezatorius dar nepasiruošęs.</string>
    <string name="cat_voice">Balsas</string>
    <string name="cat_speech">Kalbėjimas</string>
    <string name="cat_dictionary">Žodynas</string>
</resources>
